Added extra info into views to help with schema generation Updated schema
